@@ -127,6 +127,7 @@ function_entry pgsql_functions[] = {
 	PHP_FE(pg_fetch_array,	NULL)
 	PHP_FE(pg_fetch_object,	NULL)
 	PHP_FE(pg_fetch_all,	NULL)
+	PHP_FE(pg_fetch_all_columns,	NULL)
 #if HAVE_PQCMDTUPLES
 	PHP_FE(pg_affected_rows,NULL)
 #endif
@@ -2097,6 +2098,47 @@ PHP_FUNCTION(pg_fetch_all)
 	if (php_pgsql_result2array(pgsql_result, return_value TSRMLS_CC) == FAILURE) {
 		zval_dtor(return_value);
 		RETURN_FALSE;
+	}
+}
+/* }}} */
+
+/* {{{ proto array pg_fetch_all_columns(resource result [, int column_number])
+   Fetch all rows into array */
+PHP_FUNCTION(pg_fetch_all_columns)
+{
+	zval *result;
+	PGresult *pgsql_result;
+	pgsql_result_handle *pg_result;
+	long colno=0;
+	int pg_numrows, pg_row;
+	size_t num_fields;
+
+	if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "r|l", &result, &colno) == FAILURE) {
+		RETURN_FALSE;
+	}
+
+	ZEND_FETCH_RESOURCE(pg_result, pgsql_result_handle *, &result, -1, "PostgreSQL result", le_result);
+
+	pgsql_result = pg_result->result;
+
+	num_fields = PQnfields(pgsql_result);
+	if (colno >= num_fields || colno < 0) {
+		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Invalid column number '%ld'", colno);
+		RETURN_FALSE;
+	}
+
+	array_init(return_value);
+
+        if ((pg_numrows = PQntuples(pgsql_result)) <= 0) {
+		return;
+	}
+
+	for (pg_row = 0; pg_row < pg_numrows; pg_row++) {
+		if (PQgetisnull(pgsql_result, pg_row, colno)) {
+			add_next_index_null(return_value);
+		} else {
+			add_next_index_string(return_value, PQgetvalue(pgsql_result, pg_row, colno), 1); 
+		}		
 	}
 }
 /* }}} */
